dev: lol one dot, this is the most awful thing i made, might refactor if i get the chance